# mortis-coding-server

./: .gitignore  Cargo.toml  README.md  config.example.toml
crates/mortis-app/: Cargo.toml
crates/mortis-app/src/: lib.rs  registry.rs  services.rs
crates/mortis-asm/: Cargo.toml
crates/mortis-asm/src/: binary.rs  lib.rs
crates/mortis-asm/tests/: download.rs
crates/mortis-core/: Cargo.toml
crates/mortis-core/src/: asm.rs  config.rs  error.rs  lib.rs  model.rs  search.rs  session.rs  vcs.rs  view.rs
crates/mortis-embed/: Cargo.toml
crates/mortis-embed/assets/: README.md
crates/mortis-embed/assets/svn/linux-x86_64/: .gitkeep
crates/mortis-embed/assets/svn/windows-x86_64/: .gitkeep
crates/mortis-embed/src/: lib.rs
crates/mortis-fs/: Cargo.toml
crates/mortis-fs/src/: lib.rs
crates/mortis-search/: Cargo.toml
crates/mortis-search/src/: lib.rs
crates/mortis-server/: Cargo.toml
crates/mortis-server/src/: auth.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  mcp.rs  rest.rs  scheduler.rs  state.rs
crates/mortis-server/tests/: server_e2e.rs
crates/mortis-session/: Cargo.toml
crates/mortis-session/src/: lib.rs
crates/mortis-vcs/: Cargo.toml
crates/mortis-vcs/src/: filter.rs  git.rs  lib.rs  publish.rs  svn.rs  util.rs
crates/mortis-vcs/tests/: git_backend.rs  rehydrate.rs  svn_backend.rs
scripts/: deploy-ubuntu.sh  fetch-svn.ps1  fetch-svn.sh
