[package]
name = "mortis-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Application service layer (facade) orchestrating the domain ports."

[dependencies]
mortis-core = { workspace = true }
mortis-fs = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
camino = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
