[package]
name = "mortis-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "The mortis-code-server binary: axum REST + Streamable MCP, auth, scheduler."
default-run = "mortis-code-server"

[[bin]]
name = "mortis-code-server"
path = "src/main.rs"

[dependencies]
mortis-core = { workspace = true }
mortis-app = { workspace = true }
mortis-vcs = { workspace = true }
mortis-search = { workspace = true }
mortis-session = { workspace = true }
mortis-asm = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
camino = { workspace = true }
subtle = { workspace = true }
humantime = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { version = "0.5", features = ["util"] }
mortis-core = { workspace = true }
# Synthesize a valid ELF fixture for the assembly-session e2e test.
object = { workspace = true, features = ["write"] }
