[package]
name = "mortis-session"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Copy-on-write session overlay with status/diff/patch, persistence and TTL."

[dependencies]
mortis-core = { workspace = true }
mortis-fs = { workspace = true }
similar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
camino = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
